--- a/src/containers/Navigation/Navigation.module.scss
+++ b/src/containers/Navigation/Navigation.module.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   align-tracks: center;
+  box-shadow: 3px 0px 20px rgba(0, 0, 0, 0.04);
   .searchBox {
     display: flex;
     flex-basis: 30%;
@@ -51,7 +52,6 @@
       color: #213f7d;
       margin-right: 2rem;
       cursor: pointer;
-
     }
     svg {
       cursor: pointer;
