--- a/src/components/DBSidebar/DBSidebar.module.scss
+++ b/src/components/DBSidebar/DBSidebar.module.scss
@@ -11,7 +11,7 @@
     font-weight: 500;
     font-size: 1.2rem;
     line-height: 1.4rem;
-    color: #545f7d;
+    color: $c-primary-grey;
     margin-bottom: 8px;
     text-transform: uppercase;
     margin-top: 12px;
