--- a/src/containers/Navigation/Navigation.module.scss
+++ b/src/containers/Navigation/Navigation.module.scss
@@ -25,7 +25,7 @@
       line-height: 1.6rem;
       font-family: $f-work-sans;
 
-      color: #545f7d;
+      color: $c-primary-grey;
       font-weight: 400;
       &:placeholder-shown {
         opacity: 0.7;
