--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,6 +1,8 @@
 // COLORS
 $c-primary: #39cdcc;
+$c-primary-grey : #545f7d ; 
 // FONTS
 $f-avenir: "Avenir Next", "Work Sans", sans-serif;
 $f-work-sans: "Work Sans", "Avenir Next", sans-serif;
 $f-roboto: "Roboto", "Work Sans", sans-serif;
+$f-sf-compact: "SF Compact Text", "Work Sans", sans-serif;
