--- a/src/components/DBUsers/DBUsers.module.scss
+++ b/src/components/DBUsers/DBUsers.module.scss
@@ -17,6 +17,7 @@
     width: 100%;
     & > div {
       // stat
+      flex-grow: 1;
       background: #ffffff;
       border: 1px solid rgba(33, 63, 125, 0.06);
       box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
@@ -36,7 +37,7 @@
         font-size: 1.4rem;
         line-height: 1.6rem;
         text-transform: uppercase;
-        color: #545f7d;
+        color: $c-primary-grey;
       }
       p {
         font-weight: 600;
@@ -44,6 +45,208 @@
         line-height: 2.8rem;
         text-transform: uppercase;
         color: #213f7d;
+      }
+    }
+  }
+}
+.usersTableContainer {
+  background: #ffffff;
+  border: 1px solid rgba(33, 63, 125, 0.06);
+  box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+  border-radius: 4px;
+  margin-top: 7rem;
+  padding: 4rem;
+  position: relative;
+  .filter {
+    position: absolute;
+    top: 8rem;
+    left: 0;
+    width: 27rem;
+
+    background: #ffffff;
+    border: 1px solid rgba(84, 95, 125, 0.14);
+    box-shadow: 3px 5px 2rem rgba(0, 0, 0, 0.04);
+    border-radius: 4px;
+    padding: 2rem;
+    p {
+      line-height: 1.6rem;
+      font-size: 1.4rem;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 2rem;
+      span {
+        font-family: $f-work-sans;
+        font-weight: 500;
+        color: $c-primary-grey;
+        margin-bottom: 1rem;
+      }
+      input,
+      select {
+        padding: 1rem;
+        background: #ffffff;
+        border: 1px solid hsla(220, 58%, 31%, 0.2);
+        border-radius: 8px;
+        &:placeholder-shown {
+        }
+      }
+    }
+    p:last-child {
+      // filter button and reset button container
+      flex-direction: row;
+      column-gap: 1rem;
+      button {
+        font-family: $f-work-sans;
+        font-weight: 600;
+        font-size: 1.4rem;
+        line-height: 1.6rem;
+        border: 1px solid currentColor;
+        border-radius: .8rem;
+        padding: .8rem 2.4rem;
+        &:nth-of-type(1) {
+          color: $c-primary-grey;
+          border-radius: 1px solid $c-primary-grey;
+        }
+        &:nth-of-type(2) {
+          color: #ffffff;
+          background: $c-primary;
+          border: 1px solid $c-primary;
+        }
+      }
+    }
+  }
+  table {
+    font-family: $f-work-sans;
+    width: 100%;
+    th {
+      font-weight: 600;
+      font-size: 1.2rem;
+      line-height: 1.4rem;
+      text-transform: uppercase;
+
+      color: $c-primary-grey;
+
+      span,
+      img {
+        display: inline;
+        vertical-align: middle;
+      }
+      img {
+        width: 1.6rem;
+        height: 1.6rem;
+        margin-left: 1rem;
+        cursor: pointer;
+      }
+    }
+    td {
+      font-weight: 400;
+      font-size: 1.4rem;
+      line-height: 1.6rem;
+      color: $c-primary-grey;
+      padding: 1rem;
+      &:nth-of-type(1) {
+        // oganizaton td
+        text-transform: capitalize;
+      }
+
+      &:nth-of-type(3) {
+        // email td
+        text-transform: lowercase;
+        // DID THIS TO AVOID LONG VERTICAL TABLE
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 15rem;
+      }
+      &:nth-of-type(7) {
+        // elipses td
+        position: relative;
+        .actions {
+          position: absolute;
+          background: #ffff;
+          z-index: 10;
+          left: -2rem;
+          top: -1rem;
+          padding: 1rem;
+          display: flex;
+          flex-direction: column;
+          row-gap: 1rem;
+          width: fit-content;
+          min-width: 15rem;
+
+          background: #ffffff;
+          border: 1px solid rgba(84, 95, 125, 0.04);
+          box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.04);
+          border-radius: 4px;
+
+          p {
+            display: flex;
+            column-gap: 1rem;
+            cursor: pointer;
+            font-size: 1.4rem;
+          }
+        }
+        img {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+}
+
+.bottomFilter {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin-top: 2rem;
+  div:nth-of-type(1) {
+    // LEFT SIDE
+    font-family: $f-work-sans;
+    font-size: 1.4rem;
+    font-style: normal;
+    line-height: 1.6rem;
+
+    select {
+      margin: 0 1rem;
+      background: rgba(33, 63, 125, 0.1);
+      border-radius: 4px;
+      outline: none;
+      border: none;
+      padding: 0.8rem;
+
+      font-weight: 500;
+
+      color: #213f7d;
+    }
+    span {
+      font-weight: 400;
+      color: $c-primary-grey;
+    }
+  }
+  div:nth-of-type(2) {
+    // RIGHT SIDE  SIDE
+    font-family: $f-work-sans;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.9rem;
+
+    color: $c-primary-grey;
+    display: flex;
+    column-gap: 0.8rem;
+    button {
+      width: 2.4rem;
+      height: 2.4rem;
+      img {
+        pointer-events: none;
+      }
+      &:last-child,
+      &:first-child {
+        background: rgba(33, 63, 125, 0.1);
+        border-radius: 4px;
+      }
+      &:last-child {
+        img {
+          transform: rotate(180deg);
+        }
       }
     }
   }
