--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -20,6 +20,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 code {
@@ -39,7 +41,7 @@ button {
   background: transparent;
   cursor: pointer;
 }
-
+select, 
 input {
   outline: none;
   border: none;
