--- a/src/components/DBUsers/DBUsers.module.scss
+++ b/src/components/DBUsers/DBUsers.module.scss
@@ -57,63 +57,7 @@
   margin-top: 7rem;
   padding: 4rem;
   position: relative;
-  .filter {
-    position: absolute;
-    top: 8rem;
-    left: 0;
-    width: 27rem;
 
-    background: #ffffff;
-    border: 1px solid rgba(84, 95, 125, 0.14);
-    box-shadow: 3px 5px 2rem rgba(0, 0, 0, 0.04);
-    border-radius: 4px;
-    padding: 2rem;
-    p {
-      line-height: 1.6rem;
-      font-size: 1.4rem;
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 2rem;
-      span {
-        font-family: $f-work-sans;
-        font-weight: 500;
-        color: $c-primary-grey;
-        margin-bottom: 1rem;
-      }
-      input,
-      select {
-        padding: 1rem;
-        background: #ffffff;
-        border: 1px solid hsla(220, 58%, 31%, 0.2);
-        border-radius: 8px;
-        &:placeholder-shown {
-        }
-      }
-    }
-    p:last-child {
-      // filter button and reset button container
-      flex-direction: row;
-      column-gap: 1rem;
-      button {
-        font-family: $f-work-sans;
-        font-weight: 600;
-        font-size: 1.4rem;
-        line-height: 1.6rem;
-        border: 1px solid currentColor;
-        border-radius: .8rem;
-        padding: .8rem 2.4rem;
-        &:nth-of-type(1) {
-          color: $c-primary-grey;
-          border-radius: 1px solid $c-primary-grey;
-        }
-        &:nth-of-type(2) {
-          color: #ffffff;
-          background: $c-primary;
-          border: 1px solid $c-primary;
-        }
-      }
-    }
-  }
   table {
     font-family: $f-work-sans;
     width: 100%;
@@ -151,11 +95,36 @@
       &:nth-of-type(3) {
         // email td
         text-transform: lowercase;
-        // DID THIS TO AVOID LONG VERTICAL TABLE
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        // DID THIS TO AVOID TOO LONG HORIZONTAL TABLE
         max-width: 15rem;
+      }
+      &:nth-of-type(6) {
+// status
+        button{
+          padding: 1rem;
+          border-radius: 100px;
+          text-transform: capitalize;
+          &.pending {
+          color : #E9B200 ;
+          background: rgba(233, 178, 0,.1);
+        }
+        &.inactive {
+          color: hsl(224, 20%, 41%);
+          background: hsla(224, 20%, 41%,.1);
+          
+        }
+        &.active{
+          color: hsl(137, 60%, 51%);
+          background: hsla(137, 60%, 51%,.1);
+        }
+        &.blacklisted {
+          color: #E4033B;
+          background : hsla(345, 97%, 45%,.1)
+        }
+      }
       }
       &:nth-of-type(7) {
         // elipses td
