--- a/src/components/DBViewUser/DBViewUser.module.scss
+++ b/src/components/DBViewUser/DBViewUser.module.scss
@@ -62,7 +62,7 @@
     .topViewMains {
       display: flex;
       column-gap: 1rem;
-      & > p {
+      & > div {
         padding: 0 1.2rem;
         border-right: 1px solid hsla(224, 20%, 41%, 0.2);
         & > img {
