--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,5 +1,12 @@
 @import "../../sass/variables";
-
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 .login {
   display: flex;
   min-height: 100vh;
@@ -48,7 +55,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      span {
+     & > span {
         // toggler for password (show)
         display: block;
         width: fit-content;
@@ -115,6 +122,18 @@
         text-transform: uppercase;
 
         color: #ffffff;
+        display: flex; 
+        column-gap: 1rem;
+        justify-content: center;
+
+        svg {
+          animation: rotate 1s infinite ;
+        }
+        &:disabled {
+          border: 1px solid $c-primary;
+          color: $c-primary;
+          background: #fff;
+        }
       }
     }
   }
