--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,4 +1,5 @@
 @import "../../sass/variables";
+@import "../../sass/mixins";
 @keyframes rotate {
   from {
     transform: rotate(0deg);
@@ -7,14 +8,29 @@
     transform: rotate(360deg);
   }
 }
+
 .login {
   display: flex;
   min-height: 100vh;
+  @include respond('max', $bp-small){
+    display: block;
+    padding : 2rem 5%;
+  }
+  & > img {
+    display: none ;;
+    @include respond('max', $bp-small){
+      display : block ;
+    };
+  }
   .leftImgs {
     flex-basis: 50%;
     display: flex;
     flex-direction: column;
     padding: 5% 5%;
+    @include respond('max', $bp-small){
+      display: none;
+    }
+    
     img:nth-of-type(1) {
       // LOGO IMG
       width: 17.4rem;
@@ -55,7 +71,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-     & > span {
+      & > span {
         // toggler for password (show)
         display: block;
         width: fit-content;
@@ -122,12 +138,12 @@
         text-transform: uppercase;
 
         color: #ffffff;
-        display: flex; 
+        display: flex;
         column-gap: 1rem;
         justify-content: center;
 
         svg {
-          animation: rotate 1s infinite ;
+          animation: rotate 1s infinite;
         }
         &:disabled {
           border: 1px solid $c-primary;
